# telegram-scholar-bot

./: README.md  pyproject.toml  sample.env
src/telegram-scholar-bot/: __main__.py  bot.py  utils.py
